--- a/solution.ipynb
+++ b/solution.ipynb
@@ -28,37 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Preparación del dataset.\n",
-    "\"\"\"\n",
-    "\n",
-    "# Importe train_test_split\n",
-    "from ____ import ____\n",
-    "\n",
-    "# Cargue los datos de ejemplo y asigne los resultados a `X` y `y`.\n",
-    "x, y = pregunta_01()\n",
-    "\n",
-    "# Divida los datos de entrenamiento y prueba. La semilla del generador de números\n",
-    "# aleatorios es 12453. Use el 75% de los patrones para entrenamiento.\n",
-    "(  \n",
-    "    x_train,  \n",
-    "    x_test,  \n",
-    "    y_train,  \n",
-    "    y_test,  \n",
-    ") = ____(  \n",
-    "    ____,  \n",
-    "    ____,  \n",
-    "    test_size=____,  \n",
-    "    random_state=____,  \n",
-    ")  \n",
-    "\n",
-    "# Retorne `X_train`, `X_test`, `y_train` y `y_test`\n",
-    "return x_train, x_test, y_train, y_test"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,7 +78,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Importe train_test_split\n",
-    "    from ____ import ____\n",
+    "    from sklearn.model_selection import train_test_split\n",
     "\n",
     "    # Cargue los datos de ejemplo y asigne los resultados a `X` y `y`.\n",
     "    x, y = pregunta_01()\n",
@@ -117,11 +90,11 @@
     "        x_test,  \n",
     "        y_train,  \n",
     "        y_test,  \n",
-    "    ) = ____(  \n",
-    "        ____,  \n",
-    "        ____,  \n",
-    "        test_size=____,  \n",
-    "        random_state=____,  \n",
+    "    ) = train_test_split(  \n",
+    "        x,  \n",
+    "        y,  \n",
+    "        test_size=0.25,  \n",
+    "        random_state=12453,  \n",
     "    )  \n",
     "\n",
     "    # Retorne `X_train`, `X_test`, `y_train` y `y_test`\n",
