--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,53 +23,7 @@
     "    X = X.drop(\"strength\", axis = 1) \n",
     "\n",
     "    # Retorne `X` y `y`\n",
-    "    return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Pronostico de la resistencia del concreto usando redes neuronales\n",
-    "-----------------------------------------------------------------------------------------\n",
-    "\n",
-    "La descripción del problema está disponible en:\n",
-    "\n",
-    "https://jdvelasq.github.io/courses/notebooks/sklearn_supervised_10_neural_networks/1-02_pronostico_de_la_resistencia_del_concreto.html\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "def pregunta_01():\n",
-    "    \"\"\"\n",
-    "    Carga y separación de los datos en `X` `y`\n",
-    "    \"\"\"\n",
-    "    # Lea el archivo `concrete.csv` y asignelo al DataFrame `df`\n",
-    "    df = pd.read_csv(\"concrete.csv\")\n",
-    "\n",
-    "    # Asigne la columna `strength` a la variable `y`.\n",
-    "    y = df.strength  \n",
-    "\n",
-    "    # Asigne una copia del dataframe `df` a la variable `X`.\n",
-    "    X = df.copy(deep = True)  \n",
-    "\n",
-    "    # Remueva la columna `strength` del DataFrame `X`.\n",
-    "    X = X.drop(\"strength\", axis = 1) \n",
-    "\n",
-    "    # Retorne `X` y `y`\n",
-    "    return x, y\n",
+    "    return X, y\n",
     "\n",
     "\n",
     "def pregunta_02():\n",
@@ -100,7 +54,6 @@
     "    # Retorne `X_train`, `X_test`, `y_train` y `y_test`\n",
     "    return x_train, x_test, y_train, y_test\n",
     "\n",
-    "\n",
     "def pregunta_03():\n",
     "    \"\"\"\n",
     "    Construcción del pipeline\n",
@@ -109,7 +62,9 @@
     "    # Importe MLPRegressor\n",
     "    # Importe MinMaxScaler\n",
     "    # Importe Pipeline\n",
-    "    from ____ import ____\n",
+    "    from sklearn.neural_network import MLPRegressor\n",
+    "    from sklearn.preprocessing import MinMaxScaler\n",
+    "    from sklearn.pipeline import Pipeline\n",
     "\n",
     "    # Cree un pipeline que contenga un estimador MinMaxScaler y un estimador\n",
     "    # MLPRegressor\n",
@@ -117,19 +72,58 @@
     "        steps=[\n",
     "            (\n",
     "                \"minmaxscaler\",\n",
-    "                ____(___),  \n",
+    "                MinMaxScaler(),  \n",
     "            ),\n",
     "            (\n",
     "                \"mlpregressor\",\n",
-    "                ____(____),  \n",
+    "                MLPRegressor(),  \n",
     "            ),\n",
     "        ],\n",
     "    )\n",
     "\n",
     "    # Retorne el pipeline\n",
-    "    return pipeline\n",
+    "    return pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Construcción del pipeline\n",
+    "\"\"\"\n",
     "\n",
+    "# Importe MLPRegressor\n",
+    "# Importe MinMaxScaler\n",
+    "# Importe Pipeline\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
+    "# Cree un pipeline que contenga un estimador MinMaxScaler y un estimador\n",
+    "# MLPRegressor\n",
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\n",
+    "            \"minmaxscaler\",\n",
+    "            MinMaxScaler(),  \n",
+    "        ),\n",
+    "        (\n",
+    "            \"mlpregressor\",\n",
+    "            MLPRegressor(),  \n",
+    "        ),\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def pregunta_04():\n",
     "    \"\"\"\n",
     "    Creación de la malla de búsqueda\n",
