--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Pronostico de la resistencia del concreto usando redes neuronales\n",
+    "-----------------------------------------------------------------------------------------\n",
+    "\n",
+    "La descripción del problema está disponible en:\n",
+    "\n",
+    "https://jdvelasq.github.io/courses/notebooks/sklearn_supervised_10_neural_networks/1-02_pronostico_de_la_resistencia_del_concreto.html\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
     "def pregunta_01():\n",
     "    \"\"\"\n",
     "    Carga y separación de los datos en `X` `y`\n",
@@ -82,48 +94,9 @@
     "    )\n",
     "\n",
     "    # Retorne el pipeline\n",
-    "    return pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Construcción del pipeline\n",
-    "\"\"\"\n",
+    "    return pipeline\n",
     "\n",
-    "# Importe MLPRegressor\n",
-    "# Importe MinMaxScaler\n",
-    "# Importe Pipeline\n",
-    "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "# Cree un pipeline que contenga un estimador MinMaxScaler y un estimador\n",
-    "# MLPRegressor\n",
-    "pipeline = Pipeline(\n",
-    "    steps=[\n",
-    "        (\n",
-    "            \"minmaxscaler\",\n",
-    "            MinMaxScaler(),  \n",
-    "        ),\n",
-    "        (\n",
-    "            \"mlpregressor\",\n",
-    "            MLPRegressor(),  \n",
-    "        ),\n",
-    "    ],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def pregunta_04():\n",
     "    \"\"\"\n",
     "    Creación de la malla de búsqueda\n",
@@ -143,13 +116,13 @@
     "    #   * Use parada temprana\n",
     "\n",
     "    param_grid = {\n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
-    "        ___: ____,  \n",
+    "        \"hidden_layer_sizes\": [(x,) for x in range(1, 9)],  \n",
+    "        \"activation\": [\"relu\"],  \n",
+    "        \"learning_rate\": [\"adaptive\"],  \n",
+    "        \"momentum\": [0.7, 0.8, 0.9],  \n",
+    "        \"learning_rate_init\": [0.01, 0.05, 0.1],  \n",
+    "        \"max_iter\": [5000],  \n",
+    "        \"early_stopping\": [True],  \n",
     "    }\n",
     "\n",
     "    estimator = pregunta_03()\n",
@@ -161,13 +134,70 @@
     "    gridsearchcv = GridSearchCV(\n",
     "        estimator=estimator,\n",
     "        param_grid=param_grid,\n",
-    "        ___ = ____  \n",
-    "        ___ = ____  \n",
+    "        cv = 5,  \n",
+    "        scoring='r2'  \n",
     "    )\n",
     "\n",
-    "    return gridsearchcv\n",
+    "    return gridsearchcv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Evalue el modelo obtenido.\n",
+    "\"\"\"\n",
     "\n",
+    "# Importe mean_squared_error\n",
+    "from ____ import ____"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargue las variables.\n",
+    "x_train, x_test, y_train, y_test = pregunta_02()\n",
     "\n",
+    "# Obtenga el objeto GridSearchCV\n",
+    "estimator = pregunta_04()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entrene el estimador\n",
+    "estimator.fit(x_train, y_train)  #\n",
+    "\n",
+    "# Pronostique para las muestras de entrenamiento y validacion\n",
+    "y_trian_pred = ____.____(____)  \n",
+    "y_test_pred = ____.____(____)  \n",
+    "\n",
+    "# Calcule el error cuadrático medio de las muestras\n",
+    "mse_train = ____(  \n",
+    "    ___,  \n",
+    "    ___,  \n",
+    ")\n",
+    "mse_test = ____(  \n",
+    "    ___,  \n",
+    "    ___,  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def pregunta_05():\n",
     "    \"\"\"\n",
     "    Evalue el modelo obtenido.\n",
@@ -202,6 +232,13 @@
     "    # Retorne el mse de entrenamiento y prueba\n",
     "    return mse_train, mse_test\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
