--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,13 +116,13 @@
     "    #   * Use parada temprana\n",
     "\n",
     "    param_grid = {\n",
-    "        \"hidden_layer_sizes\": [(x,) for x in range(1, 9)],  \n",
-    "        \"activation\": [\"relu\"],  \n",
-    "        \"learning_rate\": [\"adaptive\"],  \n",
-    "        \"momentum\": [0.7, 0.8, 0.9],  \n",
-    "        \"learning_rate_init\": [0.01, 0.05, 0.1],  \n",
-    "        \"max_iter\": [5000],  \n",
-    "        \"early_stopping\": [True],  \n",
+    "        \"mlpregressor__hidden_layer_sizes\": [(x,) for x in range(1, 9)],  \n",
+    "        \"mlpregressor__activation\": [\"relu\"],  \n",
+    "        \"mlpregressor__learning_rate\": [\"adaptive\"],  \n",
+    "        \"mlpregressor__momentum\": [0.7, 0.8, 0.9],  \n",
+    "        \"mlpregressor__learning_rate_init\": [0.01, 0.05, 0.1],  \n",
+    "        \"mlpregressor__max_iter\": [5000],  \n",
+    "        \"mlpregressor__early_stopping\": [True],  \n",
     "    }\n",
     "\n",
     "    estimator = pregunta_03()\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,43 +152,29 @@
     "\"\"\"\n",
     "\n",
     "# Importe mean_squared_error\n",
-    "from ____ import ____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "# Cargue las variables.\n",
     "x_train, x_test, y_train, y_test = pregunta_02()\n",
     "\n",
     "# Obtenga el objeto GridSearchCV\n",
-    "estimator = pregunta_04()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "estimator = pregunta_04()\n",
+    "\n",
     "# Entrene el estimador\n",
     "estimator.fit(x_train, y_train)  #\n",
     "\n",
     "# Pronostique para las muestras de entrenamiento y validacion\n",
-    "y_trian_pred = ____.____(____)  \n",
-    "y_test_pred = ____.____(____)  \n",
+    "y_trian_pred = estimator.predict(x_train)  \n",
+    "y_test_pred = estimator.predict(x_test)  \n",
     "\n",
     "# Calcule el error cuadrático medio de las muestras\n",
-    "mse_train = ____(  \n",
-    "    ___,  \n",
-    "    ___,  \n",
+    "mse_train = mean_squared_error(  \n",
+    "    y_train,  \n",
+    "    y_trian_pred,  \n",
     ")\n",
-    "mse_test = ____(  \n",
-    "    ___,  \n",
-    "    ___,  \n",
+    "mse_test = mean_squared_error(  \n",
+    "    y_test,  \n",
+    "    y_test_pred,  \n",
     ")"
    ]
   },
@@ -204,7 +190,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Importe mean_squared_error\n",
-    "    from ____ import ____\n",
+    "    from sklearn.metrics import mean_squared_error\n",
     "\n",
     "    # Cargue las variables.\n",
     "    x_train, x_test, y_train, y_test = pregunta_02()\n",
@@ -216,17 +202,17 @@
     "    estimator.fit(x_train, y_train)  #\n",
     "\n",
     "    # Pronostique para las muestras de entrenamiento y validacion\n",
-    "    y_trian_pred = ____.____(____)  \n",
-    "    y_test_pred = ____.____(____)  \n",
+    "    y_trian_pred = estimator.predict(x_train)  \n",
+    "    y_test_pred = estimator.predict(x_test)  \n",
     "\n",
     "    # Calcule el error cuadrático medio de las muestras\n",
-    "    mse_train = ____(  \n",
-    "        ___,  \n",
-    "        ___,  \n",
+    "    mse_train = mean_squared_error(  \n",
+    "        y_train,  \n",
+    "        y_trian_pred,  \n",
     "    )\n",
-    "    mse_test = ____(  \n",
-    "        ___,  \n",
-    "        ___,  \n",
+    "    mse_test = mean_squared_error(  \n",
+    "        y_test,  \n",
+    "        y_test_pred,  \n",
     "    )\n",
     "\n",
     "    # Retorne el mse de entrenamiento y prueba\n",
