fix import statement in tests file

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,15 +135,50 @@
     "        estimator=estimator,\n",
     "        param_grid=param_grid,\n",
     "        cv = 5,  \n",
-    "        scoring='r2'  \n",
+    "        scoring='r2'\n",
+    "        #scoring = 'accuracy'\n",
     "    )\n",
     "\n",
-    "    return gridsearchcv"
+    "    return gridsearchcv\n",
+    "\n",
+    "def pregunta_05():\n",
+    "    \"\"\"\n",
+    "    Evalue el modelo obtenido.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Importe mean_squared_error\n",
+    "    from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "    # Cargue las variables.\n",
+    "    x_train, x_test, y_train, y_test = pregunta_02()\n",
+    "\n",
+    "    # Obtenga el objeto GridSearchCV\n",
+    "    estimator = pregunta_04()\n",
+    "\n",
+    "    # Entrene el estimador\n",
+    "    estimator.fit(x_train, y_train)  #\n",
+    "\n",
+    "    # Pronostique para las muestras de entrenamiento y validacion\n",
+    "    y_trian_pred = estimator.predict(x_train)  \n",
+    "    y_test_pred = estimator.predict(x_test)  \n",
+    "\n",
+    "    # Calcule el error cuadrático medio de las muestras\n",
+    "    mse_train = mean_squared_error(  \n",
+    "        y_train,  \n",
+    "        y_trian_pred,  \n",
+    "    )\n",
+    "    mse_test = mean_squared_error(  \n",
+    "        y_test,  \n",
+    "        y_test_pred,  \n",
+    "    )\n",
+    "\n",
+    "    # Retorne el mse de entrenamiento y prueba\n",
+    "    return mse_train, mse_test\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,43 +215,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115.56641737167915"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def pregunta_05():\n",
-    "    \"\"\"\n",
-    "    Evalue el modelo obtenido.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Importe mean_squared_error\n",
-    "    from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "    # Cargue las variables.\n",
-    "    x_train, x_test, y_train, y_test = pregunta_02()\n",
-    "\n",
-    "    # Obtenga el objeto GridSearchCV\n",
-    "    estimator = pregunta_04()\n",
-    "\n",
-    "    # Entrene el estimador\n",
-    "    estimator.fit(x_train, y_train)  #\n",
-    "\n",
-    "    # Pronostique para las muestras de entrenamiento y validacion\n",
-    "    y_trian_pred = estimator.predict(x_train)  \n",
-    "    y_test_pred = estimator.predict(x_test)  \n",
-    "\n",
-    "    # Calcule el error cuadrático medio de las muestras\n",
-    "    mse_train = mean_squared_error(  \n",
-    "        y_train,  \n",
-    "        y_trian_pred,  \n",
-    "    )\n",
-    "    mse_test = mean_squared_error(  \n",
-    "        y_test,  \n",
-    "        y_test_pred,  \n",
-    "    )\n",
-    "\n",
-    "    # Retorne el mse de entrenamiento y prueba\n",
-    "    return mse_train, mse_test\n"
+    "mse_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120.45065546450502"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse_test"
    ]
   },
   {
