--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "\"\"\"\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "def pregunta_01():\n",
     "    \"\"\"\n",
@@ -65,6 +66,7 @@
     "\n",
     "    # Retorne `X_train`, `X_test`, `y_train` y `y_test`\n",
     "    return x_train, x_test, y_train, y_test\n",
+    "\n",
     "\n",
     "def pregunta_03():\n",
     "    \"\"\"\n",
@@ -136,10 +138,11 @@
     "        param_grid=param_grid,\n",
     "        cv = 5,  \n",
     "        scoring='r2'\n",
-    "        #scoring = 'accuracy'\n",
+    "        #scoring='accuracy'\n",
     "    )\n",
     "\n",
     "    return gridsearchcv\n",
+    "\n",
     "\n",
     "def pregunta_05():\n",
     "    \"\"\"\n",
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +199,7 @@
     "estimator = pregunta_04()\n",
     "\n",
     "# Entrene el estimador\n",
-    "estimator.fit(x_train, y_train)  #\n",
+    "estimator.fit(x_train, y_train)\n",
     "\n",
     "# Pronostique para las muestras de entrenamiento y validacion\n",
     "y_trian_pred = estimator.predict(x_train)  \n",
@@ -215,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "115.56641737167915"
+       "110.18325843516632"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "120.45065546450502"
+       "113.66109030941014"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
